# email-vault-panel

./: .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: oauth_desktop_helper.py
src/email_vault_panel/: db.py  gmail.py  main.py
src/email_vault_panel/static/: index.html
