[project]
name = "email-vault-panel"
version = "0.1.0"
description = "Umbrel Email Vault — alias manager (phase 1) + Gmail later"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0",
]

[project.scripts]
email-vault-panel = "email_vault_panel.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_vault_panel"]
