[project]
name = "email-vault-panel"
version = "0.2.2"
description = "Umbrel Email Vault — alias manager + Gmail vault finder (Desktop OOB OAuth)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0",
  "google-api-python-client>=2.100.0",
  "google-auth>=2.23.0",
  "google-auth-oauthlib>=1.1.0",
  "google-auth-httplib2>=0.2.0",
]

[project.scripts]
email-vault-panel = "email_vault_panel.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_vault_panel"]
